# voice-analyzer-ios

./: .gitignore  .gitmodules  .swift-format  Cargo.toml  LICENSE  Makefile  Podfile  README.md  VoiceAnalyzerRust.podspec  about.toml
.github/workflows/: test.yml
VoiceAnalyzer/: Info.plist
VoiceAnalyzer.xcodeproj/: project.pbxproj
VoiceAnalyzer.xcworkspace/: contents.xcworkspacedata
VoiceAnalyzer.xcworkspace/xcshareddata/swiftpm/: Package.resolved
VoiceAnalyzer.xcworkspace/xcshareddata/xcschemes/: App Store Release.xcscheme  Debug.xcscheme  Testable Release.xcscheme
VoiceAnalyzer/Assets.xcassets/AppIcon.appiconset/: Contents.json
VoiceAnalyzer/Assets.xcassets/Primary.colorset/: Contents.json
VoiceAnalyzer/res/: RustAcknowledgements.inputs.shasum  RustAcknowledgements.plist.hbs  SwiftAcknowledgements.inputs.shasum  schema.sql
VoiceAnalyzer/res/Settings.bundle/: Acknowledgements.plist  RustAcknowledgements.plist  SwiftAcknowledgements.latest_result.txt  SwiftAcknowledgements.plist
VoiceAnalyzer/src/: VoiceAnalyzerApp.swift
VoiceAnalyzer/src/Environment/: AppEnvironment.swift  AppPreferences.swift  AudioSession.swift  Environment.swift
VoiceAnalyzer/src/Utilities/: AppFilesystem.swift  Comparable.swift  WaveHeader.swift  (+2 more)
formants-rs/: Cargo.toml  build.rs
formants-rs/c_src/: libformants.c  libformants.h
formants-rs/src/: ffi.rs  lib.rs
rust/: Cargo.toml  build.rs  rustfmt.toml
rust/src/: analyzer.rs  ffi.rs  irapt.rs  lib.rs  logger.rs  resample.rs  util.rs  yin.rs
rust/src/ffi/: bindgen_wrapper.h
rust/src/util/: iter.rs  vec_or_deque.rs
(+25 files in other folders)
