[package]
name    = "voice-analyzer-rust"
version = "0.1.0"
edition = "2018"

[lib]
name = "voice_analyzer_rust"
crate_type = ["staticlib"]

[dependencies]
derive_more = "0.99"
formants = { path = "../formants-rs" }
itertools = "0.10"
irapt = { git = "https://github.com/voice-analyzer/irapt-rs.git" }
log = "0.4"
num = "0.4"
rustfft = "6.0"

[dev-dependencies]
csv = "1.1"

[build-dependencies]
bindgen = "0.59"
cbindgen = "0.19"
toml = "0.5"